# SMACC2

./: .pre-commit-config.yaml
.github/workflows/: ci-format.yml
smacc2_client_library/http_client/: CMakeLists.txt
smacc2_sm_reference_library/sm_simple_action_client/: CMakeLists.txt  README.md  package.xml
smacc2_sm_reference_library/sm_simple_action_client/config/: simple_action_client_example.yaml  simple_action_client_example_config.yaml
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/: sm_simple_action_client.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/fibonacci_action_client/: cl_fibonacci.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/fibonacci_action_client/client_behaviors/: cb_fibonacci.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/mode_selection_client/: cl_mode_select.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/mode_selection_client/client_behaviors/: cb_mode_select.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/orthogonals/: or_fibonacci.hpp  or_mode_select.hpp
smacc2_sm_reference_library/sm_simple_action_client/include/sm_simple_action_client/states/: st_state_1.hpp  st_state_2.hpp
smacc2_sm_reference_library/sm_simple_action_client/launch/: sm_simple_action_client.launch
smacc2_sm_reference_library/sm_simple_action_client/src/sm_simple_action_client/: sm_simple_action_client_node.cpp
(+43 files in other folders)
